# Tesis

./: .gitignore  CMakeLists.txt  camera_calibration.cpp
Imgui_sample_code/: CMakeLists.txt
Jetson_TX2_camera_sample_code/: camera_calibration.cpp  camera_params.yml  opencv_1.cpp
Kalman_filter/: kalman_filter.py
Kalman_filter/Example_filter/: CMakeLists.txt  main.cpp
Kalman_filter/IMU_Kalman_filter/: CMakeLists.txt  KalmanFilterAbstract.hpp  LinearKalman.cpp  LinearKalmanFilter.cpp  LinearKalmanFilter.hpp  kalman.cpp  kalman.hpp  kalmanFilterAbstractTest.cpp  main.cpp
Kalman_filter/vehicle_location_example/: CMakeLists.txt  kalman.cpp  kalman.hpp  main.cpp
Realsense_sample_code/capture/: CMakeLists.txt  rs-capture-realsense.cpp
Realsense_sample_code/hello-realsense/: CMakeLists.txt  rs-hello-realsense.cpp
Realsense_sample_code/imu_data_acquisition/: CMakeLists.txt  main.cpp
Rplidar_sample_code/: CMakeLists.txt  CMakeLists2.txt  Lidar_data_plot.ipynb  \  main.cpp
